@@ -1,5 +1,5 @@
 /* Pthreads test program.
-   Copyright 1996, 2002, 2003
+   Copyright 1996, 2002, 2003, 2004
    Free Software Foundation, Inc.
 
    Written by Fred Fish of Cygnus Support
@@ -23,6 +23,7 @@
    Boston, MA 02111-1307, USA.  */
 
 #include <stdio.h>
+#include <stdlib.h>
 #include <pthread.h>
 
 /* Under OSF 2.0 & 3.0 and HPUX 10, the second arg of pthread_create
